--- a/style.css
+++ b/style.css
@@ -198,17 +198,20 @@ input:focus {
     margin: 0;
     height: 9.5rem;
     order: 1;
-    margin-left: 3.5rem; }
+    margin-left: 3.5rem;
+    margin-top: 2rem; }
     .card-back__content {
       font-size: 0.5rem;
       padding-right: 2.5rem; }
-  .card-form__privacy {
-    gap: 1rem; }
-  .card-form__input--primary {
-    width: 80vw; }
-  .card-form__input--secondary--date {
-    width: 15vw; }
-  .card-form__input--secondary--cvc {
-    width: 40vw; }
+  .card-form {
+    margin-top: 5rem; }
+    .card-form__privacy {
+      gap: 1rem; }
+    .card-form__input--primary {
+      width: 80vw; }
+    .card-form__input--secondary--date {
+      width: 15vw; }
+    .card-form__input--secondary--cvc {
+      width: 40vw; }
   .submit {
     width: 82vw; } }
